# research-trading-framework

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: ARCHITECTURE_CONTROL.md  documentation.mdc  project-architecture.mdc  python.mdc  sprint-git-workflow.mdc
.github/workflows/: ci.yml  deploy-dashboard.yml
apps/dashboard/: .gitignore  Caddyfile  Dockerfile  Project_Overview.py  README.md  app.py  docker-compose.yml  pyproject.toml
apps/dashboard/deploy/: Dockerfile  docker-compose.vps.yml  docker-compose.yml
apps/dashboard/docs/: ARCHITECTURE.md  RUNBOOK.md
apps/dashboard/pages/: 1_Overview.py  1_Research_Catalog.py  2_Market_Signal_Research.py  2_Market_and_Signal_Research.py  3_Strategy_Research.py  4_Robustness_Analysis.py  4_Strategy_Robustness.py  5_Live_Paper.py  5_Live_Paper_Trading.py
apps/dashboard/src/dashboard_app/: __init__.py  cache.py  catalog.py  charts.py  config.py  contracts.py  datasources.py  formatting.py  overlays.py  paths.py  query.py  research_view.py  streamlit_cache.py  ui.py
apps/dashboard/src/dashboard_app/caching/: __init__.py  streamlit.py
apps/dashboard/src/dashboard_app/catalog/: __init__.py  scanner.py
apps/dashboard/src/dashboard_app/charts/: __init__.py  builders.py  lightweight.py  style.py
apps/dashboard/src/dashboard_app/datasources/: __init__.py  aws_http.py  aws_stub.py  historical.py
apps/dashboard/src/dashboard_app/query/: __init__.py  dataset_locator.py  service.py
apps/dashboard/src/dashboard_app/views/: __init__.py  catalog_table.py  live_paper.py  overview.py  picker.py  robustness.py  strategy.py
apps/dashboard/tests/: test_aws_http_datasource.py  test_catalog.py  test_catalog_presentation.py  test_charts_builders.py  test_config.py  test_lightweight_charts.py  test_live_paper_view.py  test_overview.py  test_query.py  test_research_robustness_views.py  test_run_picker.py  test_strategy_view.py  test_ui_chrome.py  test_wave_d_cache_datasources.py
artifacts/: README.md
artifacts/demo/: README.md
deploy/local_aws_runbook/: README.md
docs/: README.md
docs/adr/: ADR-0001-modular-monolith.md  ADR-0002-separate-src-and-user-data.md  ADR-0003-utc-internal-time.md  ADR-0005-market-analysis-domain-and-taxonomy.md  ADR-0006-declarative-market-and-signal-models.md  ADR-0007-dataset-lifecycle-and-publication.md  ADR-0008-parquet-historical-storage.md  ADR-0011-signal-research-outcomes-and-persistence.md  ADR-0012-combined-research-scopes-and-context-alignment.md  ADR-0013-signal-research-analytics-boundary.md  ADR-0014-historical-archive-import-and-market-trade-storage.md  ADR-0015-derived-ohlcv-from-trades.md  ADR-0016-ohlcv-strategy-research-mvp.md  ADR-0017-strategy-research-inspection-boundary.md  ADR-0018-continuous-futures-materialization.md  ADR-0019-robustness-research-mvp.md  ADR-0020-model-research-methodology-mvp.md  ADR-0021-live-dry-run-execution-demo.md  ADR-0022-repository-top-level-layout.md  ADR-MA-001-market-analysis-domain-boundaries.md  ADR-MA-002-component-and-implementation-identity.md  ADR-MA-003-parameter-canonicalization-and-fingerprinting.md  ADR-MA-004-analysis-data-view-and-data-ownership.md  ADR-MA-005-analysis-result-and-output-identity.md  ADR-MA-006-dependency-dag-and-execution-planning.md  ADR-MA-007-analysis-workspace-and-derived-data.md  ADR-MA-008-cache-identity-and-cache-scope.md  ADR-MA-009-warmup-causality-and-availability.md  ADR-MA-010-external-analytical-libraries.md  ADR-MA-011-batch-versus-incremental-execution.md  ADR-MA-012-batch-multitimeframe-computation-with-polars.md  ADR-MA-013-cme-es-rth-session-and-swing-structure-mtf-projection.md  README.md
docs/agents/: AGENTS_MULTITIMEFRAME_MARKET_MODEL_UPDATED (1).md  AGENTS_UPDATED.md
docs/architecture/: ARCHITECTURE_FOUNDATIONS_UPDATED.md  DATA_MODULE_UPDATED.md  MULTITIMEFRAME_MARKET_MODEL_ARCHITECTURE_UPDATED.md  README.md  WORKFLOWS_AI_ADR_UPDATED.md
docs/onboarding/: DEVELOPER_GUIDE.md
docs/planning/: CURRENT_STATUS.md  IDEA_INBOX.md  PROBLEM_REGISTRY.md  PROJECT_MANAGEMENT_UPDATED.md  README.md  ROADMAP.md  TECHNICAL_DEBT.md
docs/reference/: ARCHITECTURE_AND_WORKFLOWS.md  AWS_BTC_FUTURES_DRY_RUN.md  DASHBOARD_APPLICATION.md  DATA_WORKFLOWS.md  LIVE_PAPER_PIPELINE_INSPECTION.md  LOCAL_BTC_FUTURES_DRY_RUN.md  MODULE_MAP.md  README.md  RESEARCH_METHODOLOGIES.md  combined_model_research.html  strategy_dashboard_nq_half_year.html
docs/vision/: ANALYSIS_WORKSPACE_AND_DERIVED_DATA.md  ARCHITECTURE_TECHNICAL_UPDATED.md  MARKET_ANALYSIS_WITH_DECISIONS.md  README.md
scratch/: README.md
scripts/: README.md
scripts/databento/: import_trades.py  inspect_dbn.py
scripts/demo/: README.md  __init__.py  run_model_research_nq_demo.py  run_portfolio_demo.py  run_robustness_demo.py
scripts/execution/: __init__.py  aws_status_api_handler.py  run_aws_btc_futures_worker.py  run_btc_futures_dry_run.py  show_execution_status.py
scripts/live_data/: __init__.py  run_binance_futures_smoke.py
scripts/market_data/: batch_import_contract_trades_range.py  build_continuous.py  build_roll_schedule.py  derive_bars_from_trades.py  import_contract_trades.py  run_half_year_backtest.py
scripts/ops/: __init__.py  backfill_dashboard_analytics_parquet.py  bench_contract_chunk_columns.py  migrate_user_data_workspace.py
scripts/portfolio_live/: README.md  serve_live_dry_run_dashboard.py
scripts/robustness_research/: analyze_robustness_experiment.py  render_robustness_report.py  run_monte_carlo_experiment.py
scripts/signal_research/: __init__.py  analyze_signal_research.py  render_signal_research_report.py  run_model_family.py  run_signal_research.py
scripts/strategy_research/: render_strategy_dashboard.py  run_strategy_research.py
src/trading_framework/: __init__.py
tests/: conftest.py
tests/e2e/: README.md  __init__.py
tests/integration/: README.md  __init__.py  test_csv_import_flow.py  test_market_analysis_mtf_vertical_slice.py  test_market_analysis_vertical_slice.py  test_s005_mtf_swing_vertical_slice.py  (+10 more)
user_data/: README.md
(+764 files in other folders)
