[project]
name = "trading-framework"
version = "0.1.0"
description = "Modular quantitative trading research framework"
readme = "README.md"
authors = [
    { name = "filip", email = "filip1folga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.uv.build-backend]
module-name = "trading_framework"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["trading_framework"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
exclude = ["tests/spike/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.spike.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[tool.coverage.run]
source = ["trading_framework"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
