[project]
name = "trading-framework"
version = "0.1.0"
description = "Modular quantitative trading research framework"
readme = "README.md"
authors = [
    { name = "filip", email = "filip1folga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "databento>=0.81.0",
    "numba>=0.66.0",
    "numpy>=2.0.0,<2.5",
    "polars>=1.0.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
    "plotly>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "exchange-calendars>=4.13.2",
    "mypy>=2.1.0",
    "numpy>=2.0.0,<2.5",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.uv.build-backend]
module-name = "trading_framework"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "tier2_databento: opt-in integration tests requiring a local Databento DBN archive",
    "binance_network: opt-in integration tests requiring public Binance network access",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["trading_framework", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/spike/*.py" = ["E402"]
"src/trading_framework/infrastructure/observability/memory_stats.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
exclude = ["tests/spike/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.spike.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["trading_framework.research.simulation.kernels.fixed_bars"]
disable_error_code = ["call-arg", "arg-type", "operator", "call-overload", "type-var"]

[tool.coverage.run]
source = ["trading_framework"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
