[project]
name = "trading-dashboard"
version = "0.1.0"
description = "Read-only Streamlit dashboard for trading research artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "plotly>=6.0.0",
    "polars>=1.0.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.0",
    "streamlit>=1.40.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dashboard_app"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["--strict-markers", "--strict-config", "-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["dashboard_app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
